// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dialog > renders 1`] = `
<div>
  <div
    class="css-167eeg5"
  >
    <div
      class="css-1vawd3v"
    >
      <input
        class="f36-margin-bottom--m css-1w37lto"
        data-test-id="cf-ui-text-input"
        placeholder="Search Term..."
        type="text"
        value=""
      />
    </div>
    <div
      class="css-1vawd3v"
    >
      <div
        class="css-1jmxdak"
      >
        <select
          class="css-hcyaiw"
          data-test-id="cf-ui-select"
        />
        <svg
          aria-hidden="true"
          class="css-14n9xrq"
          data-test-id="cf-ui-icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="css-1vawd3v"
    >
      <button
        aria-label="search"
        class="css-12lzd3d"
        data-test-id="cf-ui-icon-button"
        type="button"
      >
        <span
          class="css-3u52eb"
        >
          <svg
            aria-hidden="true"
            class="css-d29jlb"
            color="currentColor"
            data-test-id="cf-ui-icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          class="css-40g50j"
        >
          Search
        </span>
      </button>
    </div>
  </div>
  <table
    cellpadding="0"
    cellspacing="0"
    class="css-1ka9h0v"
    data-test-id="cf-ui-table"
  />
  <div
    class="css-hvj582"
  />
</div>
`;

exports[`Dialog > renders correctly and matches snapshot 1`] = `
<div>
  <div
    class="css-167eeg5"
  >
    <div
      class="css-1vawd3v"
    >
      <input
        class="f36-margin-bottom--m css-1w37lto"
        data-test-id="cf-ui-text-input"
        placeholder="Search Term..."
        type="text"
        value=""
      />
    </div>
    <div
      class="css-1vawd3v"
    >
      <div
        class="css-1jmxdak"
      >
        <select
          class="css-hcyaiw"
          data-test-id="cf-ui-select"
        >
          <option
            data-test-id="cf-ui-select-option"
            value="site1"
          >
            site1
          </option>
          <option
            data-test-id="cf-ui-select-option"
            value="site2"
          >
            site2
          </option>
        </select>
        <svg
          aria-hidden="true"
          class="css-14n9xrq"
          data-test-id="cf-ui-icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="css-1vawd3v"
    >
      <button
        aria-label="search"
        class="css-12lzd3d"
        data-test-id="cf-ui-icon-button"
        type="button"
      >
        <span
          class="css-3u52eb"
        >
          <svg
            aria-hidden="true"
            class="css-d29jlb"
            color="currentColor"
            data-test-id="cf-ui-icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          class="css-40g50j"
        >
          Search
        </span>
      </button>
    </div>
  </div>
  <table
    cellpadding="0"
    cellspacing="0"
    class="css-1ka9h0v"
    data-test-id="cf-ui-table"
  >
    <thead
      class="css-1sojo49"
      data-test-id="cf-ui-table-head"
    >
      <tr
        class="css-1sydf7g"
        data-test-id="cf-ui-table-row"
      >
        <th
          class="css-1fccvds"
          data-test-id="cf-ui-table-cell"
        >
          Select
        </th>
        <th
          class="css-9p6xbs"
          data-test-id="cf-ui-table-cell"
        >
          Code
        </th>
        <th
          class="css-9p6xbs"
          data-test-id="cf-ui-table-cell"
        >
          Name
        </th>
        <th
          class="css-9p6xbs"
          data-test-id="cf-ui-table-cell"
        >
          Image
        </th>
      </tr>
    </thead>
    <tbody
      class="css-0"
      data-test-id="cf-ui-table-body"
    >
      <tr
        class="css-1sydf7g"
        data-test-id="cf-ui-table-row"
      >
        <td
          class="css-s8xoeu"
          data-test-id="cf-ui-table-cell"
        >
          <div
            class="css-1lxwves"
          >
            <label
              class="css-1k16bbs"
              data-test-id="cf-ui-checkbox"
              for="P1"
            >
              <input
                class="css-199qhtr"
                id="P1"
                role="checkbox"
                type="checkbox"
                value=""
              />
              <span
                class="css-ely5ts"
              >
                <svg
                  aria-hidden="true"
                  class="css-1xugees"
                  data-test-id="cf-ui-icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
                  />
                </svg>
              </span>
            </label>
          </div>
        </td>
        <td
          class="css-s8xoeu"
          data-test-id="cf-ui-table-cell"
        >
          P1
        </td>
        <td
          class="css-s8xoeu"
          data-test-id="cf-ui-table-cell"
        >
          Product 1
        </td>
        <td
          class="css-s8xoeu"
          data-test-id="cf-ui-table-cell"
        >
          <img
            alt="product"
            src="image1.jpg"
          />
        </td>
      </tr>
      <tr
        class="css-1sydf7g"
        data-test-id="cf-ui-table-row"
      >
        <td
          class="css-s8xoeu"
          data-test-id="cf-ui-table-cell"
        >
          <div
            class="css-1lxwves"
          >
            <label
              class="css-1k16bbs"
              data-test-id="cf-ui-checkbox"
              for="P2"
            >
              <input
                class="css-199qhtr"
                id="P2"
                role="checkbox"
                type="checkbox"
                value=""
              />
              <span
                class="css-ely5ts"
              >
                <svg
                  aria-hidden="true"
                  class="css-1xugees"
                  data-test-id="cf-ui-icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
                  />
                </svg>
              </span>
            </label>
          </div>
        </td>
        <td
          class="css-s8xoeu"
          data-test-id="cf-ui-table-cell"
        >
          P2
        </td>
        <td
          class="css-s8xoeu"
          data-test-id="cf-ui-table-cell"
        >
          Product 2
        </td>
        <td
          class="css-s8xoeu"
          data-test-id="cf-ui-table-cell"
        >
          <img
            alt="product"
            src="image2.jpg"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="css-hvj582"
  >
    <button
      class="css-1nbom3p"
      data-test-id="cf-ui-button"
      type="button"
    >
      <span
        class="css-40g50j"
      >
        Next
      </span>
    </button>
  </div>
</div>
`;
